--- a/src/valentafarm.html
+++ b/src/valentafarm.html
@@ -42,10 +42,20 @@
             </div>
             <div class="main-title">
                 <div class="title-shell__farmcorp">
-                    <h1 class="title1">DariaPharmaVox: Ваш голос в мире фармации </h1>
-                    <h1 class="title2">Добро пожаловать на DPVox – ваш надежный источник информации о карьере в фармацевтической индустрии. Здесь вы найдете все необходимое для успешного старта и развития в этой увлекательной области.</h1>
+                    <h1 class="title1__valenta">VALENTA PHARM</h1>
+                    <h1 class="title2">Мы разрабатываем и производим препараты для профилактики и лечения заболеваний в таких областях, как психоневрология, гастроэнтерология, простудные заболевания и в ряде других.</h1>
                 </div>
-                <div class="line line__interview line__footer-home-page"></div>
+                <div class="line line__interview line__footer-home-page line__home-page-valenta"></div>
+                <p class="text-valenta">Размер компании</p>
+                <p class="text-valenta">Текущии вакансии</p>
+                <p class="text-valenta">Программы стажировок</p>
+                <p class="text-valenta">Уровень заработной платы</p>
+                <p class="text-valenta">Корпоративная культура</p>
+                <p class="text-valenta">Контакты</p>
+                <p class="text-valenta">Наличие международных сертификатов</p>
+                <p class="text-valenta">Социальные программы для сотрудников</p>
+                <p class="text-valenta">Возможности профессионального развития</p>
+                <p class="text-valenta">Рейтинг компании</p>
             </div>
         </div>
         <div class="next-section">
