--- a/src/valentafarm.html
+++ b/src/valentafarm.html
@@ -47,15 +47,15 @@
                 </div>
                 <div class="line line__interview line__footer-home-page line__home-page-valenta"></div>
                 <p class="text-valenta">Размер компании</p>
-                <p class="text-valenta">Текущии вакансии</p>
+                <a href="https://www.valentapharm.com/vacancy/" class="text-valenta">Текущии вакансии</a>
                 <p class="text-valenta">Программы стажировок</p>
                 <p class="text-valenta">Уровень заработной платы</p>
                 <p class="text-valenta">Корпоративная культура</p>
-                <p class="text-valenta">Контакты</p>
-                <p class="text-valenta">Наличие международных сертификатов</p>
-                <p class="text-valenta">Социальные программы для сотрудников</p>
-                <p class="text-valenta">Возможности профессионального развития</p>
-                <p class="text-valenta">Рейтинг компании</p>
+                <p class="text-valenta">Контакты: +74959334860, +74959334862 info@valentapharm.com</p>
+                <p class="text-valenta">Наличие международных сертификатов: GMP, ISO</p>
+                <p class="text-valenta">Социальные программы для сотрудников: медицинская страховка, фитнес, скидки на продукцию.</p>
+                <p class="text-valenta">Возможности профессионального развития: тренинги, конференции, программы повышения квалификации</p>
+                <p class="text-valenta">Рейтинг компании: Топ 5 российских фарм компаний </p>
             </div>
         </div>
         <div class="next-section">
