--- a/src/farmcomp.html
+++ b/src/farmcomp.html
@@ -161,7 +161,7 @@
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                     </div>
                     <div>
-                        <a class="text-decor__footer" href=""><h3 class="right-title__footer-hame-page">Фарм компании</h3></a>
+                        <a class="text-decor__footer" href="./farmcomp.html"><h3 class="right-title__footer-hame-page">Фарм компании</h3></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
@@ -225,7 +225,7 @@
                 <div class="menu-spisok__item1">
                     <a href="./home.html" class="menu-item"><span class="weight">01<span class="spasing"> </span></span> ГЛАВНАЯ</a>
                     <a href="./interview.html" class="menu-item"><span class="weight">02<span class="spasing"> </span></span> ИНТЕРВЬЮ</a>
-                    <a href="" class="menu-item"><span class="weight">03<span class="spasing"> </span></span> ФАРМ КОМПАНИИ </a>
+                    <a href="./farmcomp.html" class="menu-item"><span class="weight">03<span class="spasing"> </span></span> ФАРМ КОМПАНИИ </a>
                     <a href="" class="menu-item"><span class="weight">04<span class="spasing"> </span></span> РЕКОМЕНДАЦИИ</a>
                     <a href="" class="menu-item"><span class="weight">05<span class="spasing"> </span></span> НОВОСТИ</a>
                     <a href="" class="menu-item"><span class="weight">06<span class="spasing"> </span></span> КОНТАКТЫ</a>
