--- a/src/home.html
+++ b/src/home.html
@@ -174,7 +174,7 @@
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                     </div>
                     <div>
-                        <a class="text-decor__footer" href=""><h3 class="right-title__footer-hame-page">Фарм компании</h3></a>
+                        <a class="text-decor__footer" href="./farmcomp.htmldi"><h3 class="right-title__footer-hame-page">Фарм компании</h3></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
