--- a/src/valentafarm.html
+++ b/src/valentafarm.html
@@ -46,20 +46,17 @@
                     <h1 class="title2">Мы разрабатываем и производим препараты для профилактики и лечения заболеваний в таких областях, как психоневрология, гастроэнтерология, простудные заболевания и в ряде других.</h1>
                 </div>
                 <div class="line line__interview line__footer-home-page line__home-page-valenta"></div>
-                <p class="text-valenta">Размер компании</p>
-                <a href="https://www.valentapharm.com/vacancy/" class="text-valenta">Текущии вакансии</a>
-                <p class="text-valenta">Программы стажировок</p>
-                <p class="text-valenta">Уровень заработной платы</p>
-                <p class="text-valenta">Корпоративная культура</p>
-                <p class="text-valenta">Контакты: +74959334860, +74959334862 info@valentapharm.com</p>
-                <p class="text-valenta">Наличие международных сертификатов: GMP, ISO</p>
-                <p class="text-valenta">Социальные программы для сотрудников: медицинская страховка, фитнес, скидки на продукцию.</p>
-                <p class="text-valenta">Возможности профессионального развития: тренинги, конференции, программы повышения квалификации</p>
-                <p class="text-valenta">Рейтинг компании: Топ 5 российских фарм компаний </p>
+                <p class="text-valenta">Размер компании: <span class="subtext-valenta"></span></p>
+                <a href="https://www.valentapharm.com/vacancy/" class="text-valenta">Текущии вакансии: <span class="subtext-valenta"></span></a>
+                <p class="text-valenta">Программы стажировок: <span class="subtext-valenta"></span></p>
+                <p class="text-valenta">Уровень заработной платы: <span class="subtext-valenta"></span></p>
+                <p class="text-valenta">Корпоративная культура: <span class="subtext-valenta"></span></p>
+                <p class="text-valenta">Контакты: <span class="subtext-valenta">+74959334860, +74959334862 info@valentapharm.com</span></p>
+                <p class="text-valenta">Наличие международных сертификатов: <span class="subtext-valenta">GMP, ISO</span></p>
+                <p class="text-valenta">Социальные программы для сотрудников: <span class="subtext-valenta">медицинская страховка, фитнес, скидки на продукцию.</span></p>
+                <p class="text-valenta">Возможности профессионального развития: <span class="subtext-valenta">тренинги, конференции, программы повышения квалификации</span></p>
+                <p class="text-valenta">Рейтинг компании: <span class="subtext-valenta">Топ 5 российских фарм компаний </span></p>
             </div>
-        </div>
-        <div class="next-section">
-
         </div>
         <div class="footer-home-page">
             <div class="line line__interview line__footer-home-page"></div>
@@ -87,7 +84,7 @@
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                     </div>
                     <div>
-                        <a class="text-decor__footer" href=""><h3 class="right-title__footer-hame-page">Фарм компании</h3></a>
+                        <a class="text-decor__footer" href="./farmcomp.html"><h3 class="right-title__footer-hame-page">Фарм компании</h3></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
@@ -151,7 +148,7 @@
                 <div class="menu-spisok__item1">
                     <a href="./home.html" class="menu-item"><span class="weight">01<span class="spasing"> </span></span> ГЛАВНАЯ</a>
                     <a href="./interview.html" class="menu-item"><span class="weight">02<span class="spasing"> </span></span> ИНТЕРВЬЮ</a>
-                    <a href="" class="menu-item"><span class="weight">03<span class="spasing"> </span></span> ФАРМ КОМПАНИИ </a>
+                    <a href="./farmcomp.html" class="menu-item"><span class="weight">03<span class="spasing"> </span></span> ФАРМ КОМПАНИИ </a>
                     <a href="" class="menu-item"><span class="weight">04<span class="spasing"> </span></span> РЕКОМЕНДАЦИИ</a>
                     <a href="" class="menu-item"><span class="weight">05<span class="spasing"> </span></span> НОВОСТИ</a>
                     <a href="" class="menu-item"><span class="weight">06<span class="spasing"> </span></span> КОНТАКТЫ</a>
