--- a/src/farmcomp.html
+++ b/src/farmcomp.html
@@ -45,7 +45,7 @@
                     <h1 class="title1">DariaPharmaVox: Ваш голос в мире фармации </h1>
                     <h1 class="title2">Добро пожаловать на DPVox – ваш надежный источник информации о карьере в фармацевтической индустрии. Здесь вы найдете все необходимое для успешного старта и развития в этой увлекательной области.</h1>
                 </div>
-                <div class="line line__interview line__footer-home-page"></div>
+                <div class="line line-farmcomp"></div>
             </div>
             <div class="farm-company__section">
                 <div class="farm-company-card__box">
