--- a/src/home.html
+++ b/src/home.html
@@ -42,81 +42,46 @@
             </div>
             <div class="main-title">
                 <div class="title-shell">
-                    <h1 class="title1">DariaPharmaVox: Ваш голос в мире фармации </h1>
+                    <h1 class="title1">DariaPharmaVox <br>Ваш голос в мире фармации </h1>
                     <h1 class="title2">Добро пожаловать на DPVox – ваш надежный источник информации о карьере в фармацевтической индустрии. Здесь вы найдете все необходимое для успешного старта и развития в этой увлекательной области.</h1>
                 </div>
                 <div class="line"></div>
-                <div class="subtitle-shell">
-                    <button onclick="open_Btn_1_sub()" class="btn_2_subtitle-shell">Обзоры фармацевтических компаний</button>
-                    <button onclick="open_Btn_2_sub()" class="btn_2_subtitle-shell">Карьерное руководство</button>
-                    <button onclick="open_Btn_3_sub()" class="btn_2_subtitle-shell">Эксклюзивные интервью</button>
+            </div>
+        </div>
+        <div class="about-the-company__section">
+            <div class="line line__about-the-company"></div>
+            <div class="header-box-title__webctudio">
+                <div class="text__webstudio">
+                    <p>О ВЕБ-СТУДИИ</p>
+                </div>
+                <div class="title__webstudio">
+                    <p>Создаем цифровые решения для бизнеса и считаем, что лучшие решения — просты, эффективны и немного необычны</p>
+                </div>
+            </div>
+            <div class="header-box-subtitle__webstudio">
+                <p class="subtitle__webstudio">Помогаем привлечь клиентов из интернета, повысить известность компании. Для этого создаем сайты с крутым дизайном и продуманной структурой</p>
+            </div>
+            <div class="subtitle-shell">
+                <div class="box__btn_2_subtitle-shell">
+                    <i class='bx bxs-factory bx-flip-horizontal bx-subtitle-shell'></i><button onclick="open_Btn_1_sub()" class="btn_2_subtitle-shell">Обзоры фармацевтических компаний</button>
+                </div>
+                <div class="box__btn_2_subtitle-shell">
+                    <i class='bx bx-support bx-subtitle-shell'></i><button onclick="open_Btn_2_sub()" class="btn_2_subtitle-shell">Карьерное руководство</button>
+                </div>
+                <div class="box__btn_2_subtitle-shell">
+                    <i class='bx bxs-camera-movie bx-flip-horizontal bx-subtitle-shell' ></i><button onclick="open_Btn_3_sub()" class="btn_2_subtitle-shell">Эксклюзивные интервью</button>
+                </div>
+                <div class="box__btn_2_subtitle-shell">
                     <button onclick="open_Btn_4_sub()" class="btn_2_subtitle-shell">Разнообразие фармацевтических сфер</button>
+                </div>
+                <div class="box__btn_2_subtitle-shell">
                     <button onclick="open_Btn_5_sub()" class="btn_2_subtitle-shell">Советы по обучению</button>
+                </div>
+                <div class="box__btn_2_subtitle-shell">
                     <button onclick="open_Btn_6_sub()" class="btn_2_subtitle-shell">Подборка литературы</button>
+                </div>
+                <div class="box__btn_2_subtitle-shell">
                     <button onclick="open_Btn_7_sub()" class="btn_2_subtitle-shell">Анонсы мероприятий</button>
-                </div>
-                <div class="popup_btn_1_sub">
-                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
-                    <div>
-                        <h3 class="popup_title_sub">Обзоры фармацевтических компаний</h3>
-                    </div>
-                    <div>
-                        <p class="popup_subtitle_sub">Узнайте об условиях работы, корпоративной культуре и возможностях трудоустройства в ведущих компаниях отрасли.</p>
-                    </div>
-                </div>
-                <div class="popup_btn_2_sub">
-                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
-                    <div>
-                        <h3 class="popup_title_sub">Карьерное руководство</h3>
-                    </div>
-                    <div>
-                        <p class="popup_subtitle_sub">Получите советы по построению карьеры в фармации, от выбора специализации до достижения профессиональных вершин.</p>
-                    </div>
-                </div>
-                <div class="popup_btn_3_sub">
-                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
-                    <div>
-                        <h3 class="popup_title_sub">Эксклюзивные интервью</h3>
-                    </div>
-                    <div>
-                        <p class="popup_subtitle_sub">Вдохновляющие истории успеха от выпускников факультета фундаментальной медицины МГУ (отделение фармация) и опытных преподавателей.</p>
-                    </div>
-                </div>
-                <div class="popup_btn_4_sub">
-                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
-                    <div>
-                        <h3 class="popup_title_sub">Разнообразие фармацевтических сфер</h3>
-                    </div>
-                    <div>
-                        <p class="popup_subtitle_sub">Погрузитесь в мир различных направлений фармации, от разработки лекарств до клинических исследований.</p>
-                    </div>
-                </div>
-                <div class="popup_btn_5_sub">
-                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
-                    <div>
-                        <h3 class="popup_title_sub">Советы по обучению</h3>
-                    </div>
-                    <div>
-                        <p class="popup_subtitle_sub">Полезные рекомендации по эффективному обучению и успешному вхождению в выбранную сферу фармации.</p>
-                    </div>
-                </div>
-                <div class="popup_btn_6_sub">
-                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
-                    <div>
-                        <h3 class="popup_title_sub">Подборка литературы</h3>
-                    </div>
-                    <div>
-                        <p class="popup_subtitle_sub">Доступ к актуальным и проверенным источникам информации для профессионального роста.</p>
-                    </div>
-                </div>
-                <div class="popup_btn_7_sub">
-                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
-                    <div>
-                        <h3 class="popup_title_sub">Анонсы мероприятий</h3>
-                    </div>
-                    <div>
-                        <p class="popup_subtitle_sub">Будьте в курсе последних событий, конференций и семинаров в мире фармации.</p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -174,7 +139,7 @@
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                     </div>
                     <div>
-                        <a class="text-decor__footer" href="./farmcomp.htmldi"><h3 class="right-title__footer-hame-page">Фарм компании</h3></a>
+                        <a class="text-decor__footer" href="./farmcomp.html"><h3 class="right-title__footer-hame-page">Фарм компании</h3></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                         <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
@@ -245,6 +210,69 @@
                 </div>
             </div>
         </div>
+        <div class="popup_btn_1_sub">
+                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
+                    <div>
+                        <h3 class="popup_title_sub">Обзоры фармацевтических компаний</h3>
+                    </div>
+                    <div>
+                        <p class="popup_subtitle_sub">Узнайте об условиях работы, корпоративной культуре и возможностях трудоустройства в ведущих компаниях отрасли.</p>
+                    </div>
+                </div>
+                <div class="popup_btn_2_sub">
+                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
+                    <div>
+                        <h3 class="popup_title_sub">Карьерное руководство</h3>
+                    </div>
+                    <div>
+                        <p class="popup_subtitle_sub">Получите советы по построению карьеры в фармации, от выбора специализации до достижения профессиональных вершин.</p>
+                    </div>
+                </div>
+                <div class="popup_btn_3_sub">
+                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
+                    <div>
+                        <h3 class="popup_title_sub">Эксклюзивные интервью</h3>
+                    </div>
+                    <div>
+                        <p class="popup_subtitle_sub">Вдохновляющие истории успеха от выпускников факультета фундаментальной медицины МГУ (отделение фармация) и опытных преподавателей.</p>
+                    </div>
+                </div>
+                <div class="popup_btn_4_sub">
+                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
+                    <div>
+                        <h3 class="popup_title_sub">Разнообразие фармацевтических сфер</h3>
+                    </div>
+                    <div>
+                        <p class="popup_subtitle_sub">Погрузитесь в мир различных направлений фармации, от разработки лекарств до клинических исследований.</p>
+                    </div>
+                </div>
+                <div class="popup_btn_5_sub">
+                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
+                    <div>
+                        <h3 class="popup_title_sub">Советы по обучению</h3>
+                    </div>
+                    <div>
+                        <p class="popup_subtitle_sub">Полезные рекомендации по эффективному обучению и успешному вхождению в выбранную сферу фармации.</p>
+                    </div>
+                </div>
+                <div class="popup_btn_6_sub">
+                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
+                    <div>
+                        <h3 class="popup_title_sub">Подборка литературы</h3>
+                    </div>
+                    <div>
+                        <p class="popup_subtitle_sub">Доступ к актуальным и проверенным источникам информации для профессионального роста.</p>
+                    </div>
+                </div>
+                <div class="popup_btn_7_sub">
+                    <button onclick="close_Btn_sub()" class="btn_popup_sub">Закрыть</button>
+                    <div>
+                        <h3 class="popup_title_sub">Анонсы мероприятий</h3>
+                    </div>
+                    <div>
+                        <p class="popup_subtitle_sub">Будьте в курсе последних событий, конференций и семинаров в мире фармации.</p>
+                    </div>
+                </div>
     </section>
     <script src="./js/mune.js"></script>
 </body>
