Сделал адаптацию под мобильные устройства

--- a/src/home.html
+++ b/src/home.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./register.css">
+    <link rel="stylesheet" href="./media.css">
     <title>SKOLKOVO</title>
 </head>
 <body class="body">
     <section class="main_section">
         <video class="video-home_section" src="./img/1118390_4k_Mystery_3840x2160.mp4" autoplay muted loop></video>
 
-        <div class="left-footer">
+        <!--<div class="left-footer">
             <a class="left-footer__name-studios" href="./home.html">DPVox</a>
             <input class="left-footer__menu-btn" type="button" onclick="openNav()">
             <div class="footer-links">
@@ -32,14 +33,8 @@
                     <a class="left-footer-links" href=""><i class='bx bxl-youtube'></i></a>
                 </div>
             </div>
-        </div>
+        </div>-->
         <div class="home_section">
-            <div class="main-register">
-                <a href="./register.html" class="btn-reg1">Войти</a>
-                <form action="./register.html">
-                    <button class="btn-reg2"></button>
-                </form>
-            </div>
             <div class="main-title">
                 <div class="title-shell">
                     <h1 class="title1">DariaPharmaVox <br>Ваш голос в мире фармации </h1>
@@ -63,13 +58,13 @@
             </div>
             <div class="subtitle-shell">
                 <div class="box__btn_2_subtitle-shell">
-                    <i class='bx bxs-factory bx-flip-horizontal bx-subtitle-shell'></i><button onclick="open_Btn_1_sub()" class="btn_2_subtitle-shell">Обзоры фармацевтических компаний</button>
+                    <button onclick="open_Btn_1_sub()" class="btn_2_subtitle-shell">Обзоры фармацевтических компаний</button>
                 </div>
                 <div class="box__btn_2_subtitle-shell">
-                    <i class='bx bx-support bx-subtitle-shell'></i><button onclick="open_Btn_2_sub()" class="btn_2_subtitle-shell">Карьерное руководство</button>
+                    <button onclick="open_Btn_2_sub()" class="btn_2_subtitle-shell">Карьерное руководство</button>
                 </div>
                 <div class="box__btn_2_subtitle-shell">
-                    <i class='bx bxs-camera-movie bx-flip-horizontal bx-subtitle-shell' ></i><button onclick="open_Btn_3_sub()" class="btn_2_subtitle-shell">Эксклюзивные интервью</button>
+                    <button onclick="open_Btn_3_sub()" class="btn_2_subtitle-shell">Эксклюзивные интервью</button>
                 </div>
                 <div class="box__btn_2_subtitle-shell">
                     <button onclick="open_Btn_4_sub()" class="btn_2_subtitle-shell">Разнообразие фармацевтических сфер</button>
@@ -89,7 +84,7 @@
             <div class="line line__interview"></div>
             <div class="header-box__interview">
                 <div class="header-box-subtitle__interview">
-                    <a href="./interview.html" class="header-subtitle__interview">INTERNIEW</a>
+                    <a href="#0" class="header-subtitle__interview">INTERNIEW</a>
                 </div>
                 <div class="header-box-title__interview">
                     <h2 class="header-title__interview">Интервью с выпускниками и преподавателями</h2>
@@ -98,7 +93,7 @@
             </div>
             <div class="main__interview">
                 <div class="name-main__interview">
-                    <p class="name-item__interview">FIO</p>
+                    <p class="name-item__interview">Дмитрий Филатов</p>
                     <p class="name-item__interview">FIO</p>
                     <p class="name-item__interview">FIO</p>
                     <p class="name-item__interview">FIO</p>
@@ -108,7 +103,6 @@
 
                 </div>
             </div>
-            <div class="line line__interview"></div>
         </div>
         <div class="ffff">
 
