--- a/src/home.html
+++ b/src/home.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./register.css">
     <link rel="stylesheet" href="./media.css">
     <title>SKOLKOVO</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 <body class="body">
     <section class="main_section">
@@ -88,20 +90,28 @@
                 </div>
                 <div class="header-box-title__interview">
                     <h2 class="header-title__interview">Интервью с выпускниками и преподавателями</h2>
-                    <p class="header-title-bottom__interview">Текст текст текст текст текст текст текст текст текст текст текст текст</p>
+                    <p class="header-title-bottom__interview"></p>
                 </div>
             </div>
             <div class="main__interview">
                 <div class="name-main__interview">
-                    <p class="name-item__interview">Дмитрий Филатов</p>
-                    <p class="name-item__interview">FIO</p>
-                    <p class="name-item__interview">FIO</p>
-                    <p class="name-item__interview">FIO</p>
-                    <p class="name-item__interview">FIO</p>
+                    <p class="name-item__interview">Виктор Филатов</p>
+                    <p class="name-item__interview">Виктория Кулеш</p>
+                    <p class="name-item__interview"></p>
+                    <p class="name-item__interview"></p>
+                    <p class="name-item__interview"></p>
                 </div>
-                <div class="vidoe-box__interview">
-
+                <div class="slider-project"> 
+                    <div class="img-project">
+                        <iframe class="img-item" src="https://rutube.ru/play/embed/fd779b8b403081e2c31a302caaa7edf8/?p=zAvLPt1w2YzuvRzAB1OjpA" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                        <iframe class="img-item" src="https://rutube.ru/play/embed/58fe11c894b7d1e7d8102e9fa40ece94/" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>       
+                    </div>
                 </div>
+                <div></div>
+                <div class="btn-box">
+                    <button class="button1">&larr;</button>
+                    <button class="button2">&rarr;</button>    
+                </div>  
             </div>
         </div>
         <div class="ffff">
@@ -111,7 +121,7 @@
             <div class="line line__interview line__footer-home-page"></div>
             <div class="main-box__footer-home-page">
                 <div class="box-left-info__footer-home-page">
-                    <h3 class="title__footer-home-page">Официальный сайт проекта SKOLKOVO</h3>
+                    <h3 class="title__footer-home-page">DariaPharmaVOX - DPVox</h3>
                     <div class="links-box__footer-home-page">
                         <a class="links__footer-home-page" href=""><i class='bx bxl-vk'></i></a>
                         <a class="links__footer-home-page" href=""><i class='bx bxl-telegram' ></i></a>
@@ -123,38 +133,21 @@
                 <div class="box-right-info__footer-home-page">
                     <div>
                         <a class="text-decor__footer" href="./home.html"><h3 class="right-title__footer-hame-page">Главная</h3></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                     </div>
                     <div>
                         <a class="text-decor__footer" href="./interview.html"><h3 class="right-title__footer-hame-page">Интервью</h3></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                     </div>
                     <div>
                         <a class="text-decor__footer" href="./farmcomp.html"><h3 class="right-title__footer-hame-page">Фарм компании</h3></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                     </div>
                     <div>
                         <a class="text-decor__footer" href=""><h3 class="right-title__footer-hame-page">Рекомендации</h3></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                     </div>
                     <div> 
                         <a class="text-decor__footer" href=""><h3 class="right-title__footer-hame-page">Новости</h3></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                     </div>
                     <div>
                         <a class="text-decor__footer" href=""><h3 class="right-title__footer-hame-page">Контакты</h3></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
-                        <a class="text-decor__footer" href=""><p class="right-subtitle__footer-hame-page">Какая-то информация</p></a>
                     </div>
                 </div>
             </div>
@@ -269,5 +262,6 @@
                 </div>
     </section>
     <script src="./js/mune.js"></script>
+    <script src="./js/slider.js"></script>
 </body>
 </html>
